--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="page">
         <header class="header">
           <div class="logo logo_place_header"> </div>
-          <div class="header__title">Научиться учиться</div>
+          <h1 class="header__title">Научиться учиться</h1>
           <div class="header__subtitle">
             <a>Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?</a>
             <a class="header__link" href="#">Узнать &rarr;</a>
@@ -39,16 +39,137 @@
             </section>
 
             <section class="digits">
+              <h1 class="section-title">Цифры и факты</h1>
+              <div class="section-subtitle">Про учёбу и мозг</div>
+              <div class="table">
+                <div class="table__cell">
+                  <h2 class="table__heading">86 миллиардов</h2>
+                  <p class="table__text">Число нейронов в мозге человека</p>
+                </div>
+                <div class="table__cell">
+                  <h2 class="table__heading">2.1 миллиарда</h2>
+                  <p class="table__text">Число нуждающихся в повышении квалификации</p>
+                  <p class="table__text">Всемирный Банк, 2017</p>
+                </div>
+                <div class="table__cell">
+                  <h2 class="table__heading">1000 терабайт</h2>
+                  <p class="table__text">Объём памяти человека</p>
+                </div>
+                <div class="table__cell">
+                  <h2 class="table__heading">500 триллионов</h2>
+                  <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+                </div>
+                <div class="table__cell">
+                  <h2 class="table__heading">420 миллионов</h2>
+                  <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+                  <p class="table__text">Всемирный Банк, 2017</p>
+                </div>
+                <div class="table__cell">
+                  <h2 class="table__heading">17–20 лет</h2>
+                  <p class="table__text">Пик обучаемости</p>
+                </div>
+                <div class="table__cell">
+                  <h2 class="table__heading">1885 год</h2>
+                  <p class="table__text">Открытие кривой забывания</p>
+                </div>
+                <div class="table__cell">
+                  <h2 class="table__heading">1889 год</h2>
+                  <p class="table__text">Открытие условного рефлекса</p>
+                </div>
+              </div>
+
+
             </section>
 
             <section class="feinman">
+              <h1 class="feinman__title">Метод Фейнмана</h1>
+              <h2 class="feinman__subtitle">Выучить и не забыть.</h2>
+              <a class="feinman__link" href="#">Подробнее &rarr;</a>
+              <img class="feinman__illustration" src="./images/feinman.png" alt="Фейнман">
+
             </section>
 
             <section class="kaufman">
+              <h1 class="section-title section-title_theme_dark">Принципы обучения</h1>
+              <div class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</div>
+              <div class="table table_theme_dark">
+                <div class="table__cell table__cell_theme_dark">
+                  <h2 class="table__heading">1</h2>
+                  <p class="table__text">Выберите привлекательный проект</p>
+                </div>
+                <div class="table__cell table__cell_theme_dark">
+                  <h2 class="table__heading">2</h2>
+                  <p class="table__text">Сосредоточьтесь на каком-то одном навыке.</p>
+                </div>
+                <div class="table__cell table__cell_theme_dark">
+                  <h2 class="table__heading">3</h2>
+                  <p class="table__text">Определите целевой уровень мастерства.</p>
+                </div>
+                <div class="table__cell table__cell_theme_dark">
+                  <h2 class="table__heading">4</h2>
+                  <p class="table__text">Разбейте навык на элементы.</p>
+                </div>
+                <div class="table__cell table__cell_theme_dark">
+                  <h2 class="table__heading">5</h2>
+                  <p class="table__text">Приготовьте всё необходимое для занятий.</p>
+                </div>
+                <div class="table__cell table__cell_theme_dark">
+                  <h2 class="table__heading">6</h2>
+                  <p class="table__text">Устраните препятствия для занятий.</p>
+                </div>
+                <div class="table__cell table__cell_theme_dark">
+                  <h2 class="table__heading">7</h2>
+                  <p class="table__text">Выделите специальное время для занятий.</p>
+                </div>
+                <div class="table__cell table__cell_theme_dark">
+                  <h2 class="table__heading">8</h2>
+                  <p class="table__text">Создайте быстрые петли обратной связи.</p>
+                </div>
+                <div class="table__cell table__cell_theme_dark">
+                  <h2 class="table__heading">9</h2>
+                  <p class="table__text">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+                </div>
+                <div class="table__cell table__cell_theme_dark">
+                  <h2 class="table__heading">10</h2>
+                  <p class="table__text">Уделяйте внимание количеству и скорости.</p>
+                </div>
+              </div>
+              <img class="kaufman__illustration" src="/images/triangle.svg" alt="Синий треугольник">
+
+
             </section>
         </main>
         <footer class="footer">
-
+          <div class="footer__columns">
+            <div class="footer__column_content_copyright">
+              <div class="logo logo_place_footer" alt="Логотип Яндекса"></div>
+              <p class="footer__author">&copy 2019. Белич Дмитрий</p>
+            </div>
+            <div>
+              <h1 class="footer__column-heading">О Практикуме</h1>
+              <p class="footer__column-links">Главная</p>
+              <p class="footer__column-links">Концепция</p>
+              <p class="footer__column-links">Наставники</p>
+            </div>
+            <div>
+              <h1 class="footer__column-heading">Соцсети</h1>
+              <p class="footer__column-links">
+                <a class="footer__column-links" href="https://www.facebook.com/" target="_blank">
+                <img class="footer__social-icon" src="./images/facebook_white.svg" alt="Иконка Facebook">
+                Facebook</a>
+              </p>
+              <p class="footer__column-links">
+                <a class="footer__column-links" href="https://vk.com/" target="_blank">
+                <img class="footer__social-icon" src="./images/vk_white.svg" alt="Иконка Facebook">
+                ВКонтакте</a>
+              </p>
+              <p class="footer__column-links">
+                <a class="footer__column-links" href="https://www.instagram.com/" target="_blank">
+                <img class="footer__social-icon" src="./images/instagram_white.svg" alt="Иконка Facebook">
+                Instagram</a>
+              </p>
+            </div>
+          </div>
         </footer>
     </div>
 
