--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
               Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
               <a class="header__link" href="#">Узнать &rarr;</a>
             </h2>
-          <img class="header__main-illustration" src="images/two_again.png" alt="Опять двойка"></img>
+          <img class="header__main-illustration" src="images/two_again.png" alt="Опять двойка">
           <div class="header__square-pic"> </div>
         </header>
         <main class="content">
@@ -135,8 +135,8 @@
         <footer class="footer">
           <div class="footer__columns">
             <div class="footer__column_content_copyright">
-              <div class="logo logo_place_footer" alt="Логотип Яндекса"></div>
-              <p class="footer__author">&copy 2019. Белич Дмитрий</p>
+              <div class="logo logo_place_footer"></div>
+              <p class="footer__author">&copy2019. Белич Дмитрий</p>
             </div>
             <div>
               <h1 class="footer__column-heading">О Практикуме</h1>
