--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
         <header class="header">
           <div class="logo logo_place_header"> </div>
           <h1 class="header__title">Научиться учиться</h1>
-            <h2 class="header__subtitle">
+            <p class="header__subtitle">
               Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
               <a class="header__link" href="#">Узнать &rarr;</a>
-            </h2>
+            </p>
           <img class="header__main-illustration" src="images/two_again.png" alt="Опять двойка">
           <div class="header__square-pic"> </div>
         </header>
         <main class="content">
             <section class="description">
               <div class="two-columns">
-                <p class="two-columns__brief">Главные проблемы в обучении</p>
+                <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
                 <div class="two-columns__main-text">
                   <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
                   <p class="two-columns__paragraph">
@@ -35,8 +35,8 @@
             </section>
 
             <section class="digits">
-              <h1 class="section-title">Цифры и факты</h1>
-              <h2 class="section-subtitle">Про учёбу и мозг</h2>
+              <h2 class="section-title">Цифры и факты</h2>
+              <p class="section-subtitle">Про учёбу и мозг</p>
               <div class="table">
                 <div class="table__cell">
                   <h3 class="table__heading">86 миллиардов</h3>
@@ -76,15 +76,15 @@
             </section>
 
             <section class="feinman">
-              <h1 class="feinman__title">Метод Фейнмана</h1>
-              <h2 class="feinman__subtitle">Выучить и не забыть.</h2>
+              <h2 class="feinman__title">Метод Фейнмана</h2>
+              <p class="feinman__subtitle">Выучить и не забыть.</p>
               <a class="feinman__link" href="#">Подробнее &rarr;</a>
               <img class="feinman__illustration" src="./images/feinman.png" alt="Фейнман">
             </section>
 
             <section class="kaufman">
-              <h1 class="section-title section-title_theme_dark">Принципы обучения</h1>
-              <h2 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h2>
+              <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+              <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
               <div class="table table_theme_dark">
                 <div class="table__cell table__cell_theme_dark">
                   <h3 class="table__heading">1</h3>
@@ -127,42 +127,47 @@
                   <p class="table__text">Уделяйте внимание количеству и скорости.</p>
                 </div>
               </div>
-              <img class="kaufman__illustration" src="/images/triangle.svg" alt="Синий треугольник">
+              <div class="kaufman__triangle"></div>
             </section>
         </main>
         <footer class="footer">
           <div class="footer__columns">
             <div class="footer__column_content_copyright">
               <div class="logo logo_place_footer"></div>
-              <p class="footer__author">&copy2019. Белич Дмитрий</p>
+              <p class="footer__author">&copy;2019. Белич Дмитрий</p>
             </div>
-            <div>
-              <h1 class="footer__column-heading">О Практикуме</h1>
-              <p class="footer__column-links">Главная</p>
-              <p class="footer__column-links">Концепция</p>
-              <p class="footer__column-links">Наставники</p>
-            </div>
-            <div>
-              <h1 class="footer__column-heading">Соцсети</h1>
-              <p class="footer__column-links">
-                <a class="footer__column-links" href="https://www.facebook.com/" target="_blank">
-                  <img class="footer__social-icon" src="./images/facebook_white.svg" alt="Иконка Facebook">
-                  Facebook
-                </a>
-              </p>
-              <p class="footer__column-links">
-                <a class="footer__column-links" href="https://vk.com/" target="_blank">
-                  <img class="footer__social-icon" src="./images/vk_white.svg" alt="Иконка Facebook">
-                  ВКонтакте
-                </a>
-              </p>
-              <p class="footer__column-links">
-                <a class="footer__column-links" href="https://www.instagram.com/" target="_blank">
-                  <img class="footer__social-icon" src="./images/instagram_white.svg" alt="Иконка Facebook">
-                  Instagram
-                </a>
-              </p>
-            </div>
+            <nav class="footer__column-info">
+              <h2 class="footer__column-heading">О Практикуме</h2>
+              <ul class="footer__column-links">
+                <li><a  class="footer__column-link" href="#">Главная</a></li>
+                <li><a class="footer__column-link" href="#">Концепция</a></li>
+                <li><a class="footer__column-link" href="#">Наставники</a></li>
+              </ul>
+            </nav>
+            <nav class="footer__column-social">
+              <h2 class="footer__column-heading">Соцсети</h2>
+              <ul class="footer__column-links">
+                <li>
+                  <a class="footer__column-link" href="https://www.facebook.com/" target="_blank">
+                    <img class="footer__social-icon" src="./images/facebook_white.svg" alt="Иконка Facebook">
+                    Facebook
+                  </a>
+                </li>
+                <li>
+                  <a class="footer__column-link" href="https://vk.com/" target="_blank">
+                    <img class="footer__social-icon" src="./images/vk_white.svg" alt="Иконка Facebook">
+                    ВКонтакте
+                  </a>
+                </li>
+                <li>
+                  <a class="footer__column-link" href="https://www.instagram.com/" target="_blank">
+                    <img class="footer__social-icon" src="./images/instagram_white.svg" alt="Иконка Facebook">
+                    Instagram
+                  </a>
+                </li>
+              </ul>
+
+            </nav>
           </div>
         </footer>
     </div>
