--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
         </main>
         <footer class="footer">
           <div class="footer__columns">
-            <div class="footer__column_content_copyright">
+            <div class="footer__column footer__column_content_copyright">
               <div class="logo logo_place_footer"></div>
               <p class="footer__author">&copy;2019. Белич Дмитрий</p>
             </div>
-            <nav class="footer__column-info">
+            <nav class="footer__column footer__column_content_info">
               <h2 class="footer__column-heading">О Практикуме</h2>
               <ul class="footer__column-links">
                 <li><a class="footer__column-link" href="#">Главная</a></li>
@@ -144,7 +144,7 @@
                 <li><a class="footer__column-link" href="#">Наставники</a></li>
               </ul>
             </nav>
-            <nav class="footer__column-social">
+            <nav class="footer__column footer__column_content_social">
               <h2 class="footer__column-heading">Соцсети</h2>
               <ul class="footer__column-links">
                 <li>
@@ -155,13 +155,13 @@
                 </li>
                 <li>
                   <a class="footer__column-link" href="https://vk.com/" target="_blank">
-                    <img class="footer__social-icon" src="./images/vk_white.svg" alt="Иконка Facebook">
+                    <img class="footer__social-icon" src="./images/vk_white.svg" alt="Иконка ВКонтакте">
                     ВКонтакте
                   </a>
                 </li>
                 <li>
                   <a class="footer__column-link" href="https://www.instagram.com/" target="_blank">
-                    <img class="footer__social-icon" src="./images/instagram_white.svg" alt="Иконка Facebook">
+                    <img class="footer__social-icon" src="./images/instagram_white.svg" alt="Иконка Instagram">
                     Instagram
                   </a>
                 </li>
