--- a/index.html
+++ b/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Научиться учиться</title>
-    <link rel="stylesheet" href="./styles/normalize.css">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body>
-    <div class="page">
+    <div class="root">
         <header class="header">
           <div class="logo logo_place_header"> </div>
           <h1 class="header__title">Научиться учиться</h1>
@@ -71,7 +70,7 @@
               <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
               <div class="video__iframes">
                 <iframe class="video__iframe" id="ytplayer" type="text/html" width="720" height="405" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
-                <iframe class="video__iframe" id="ytplayer" type="text/html" width="720" height="405" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen>></iframe>
+                <iframe class="video__iframe" id="ytplayer" type="text/html" width="720" height="405" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
               </div>
             </section>
 
@@ -143,7 +142,6 @@
                   <img class="khan__book-pic" src="./images/book.jpg" alt="Обложка книги">
                   <a class="khan__buy-link" href="#">Купить книгу &rarr;</a>
                 </div>
-
               </div>
             </section>
 
@@ -199,19 +197,19 @@
               <h2 class="section-title">Полезные ресурсы</h2>
               <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
               <div class="resources__logo-zone">
-                <a href="#">
+                <a class="resources__link" href="#">
                   <img class="resources__logo" src="./images/arzamas.svg" alt="Логотип Arzamas">
                 </a>
-                <a href="#">
+                <a class="resources__link" href="#">
                   <img class="resources__logo" src="./images/n1.svg" alt="Логотип n1">
                 </a>
-                <a href="#">
+                <a class="resources__link" href="#">
                   <img class="resources__logo" src="./images/strelka.svg" alt="Логотип STRELKA">
                 </a>
-                <a href="#">
+                <a class="resources__link" href="#">
                   <img class="resources__logo" src="./images/polka.svg" alt="Логотип ПОЛКА">
                 </a>
-               </div>
+              </div>
             </section>
         </main>
         <footer class="footer">
@@ -254,6 +252,5 @@
           </div>
         </footer>
     </div>
-
 </body>
 </html>
