--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
               <h2 class="section-title">Видео на TED</h2>
               <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
               <div class="video__iframes">
-                <iframe class="video__iframe" id="ytplayer" type="text/html" width="720" height="405" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
-                <iframe class="video__iframe" id="ytplayer" type="text/html" width="720" height="405" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
+                <iframe class="video__iframe" id="ytplayer-1" src="https://www.youtube.com/embed/arj7oStGLkU" allowfullscreen></iframe>
+                <iframe class="video__iframe" id="ytplayer-2" src="https://www.youtube.com/embed/5MgBikgcWnY" allowfullscreen></iframe>
               </div>
             </section>
 
@@ -134,7 +134,7 @@
             <section class="khan">
               <div class="khan__container">
                 <p class="khan__author">Салман Хан</p>
-                <h2 class="khan__title">Весь мир - школа</h2>
+                <h2 class="khan__title">Весь мир — школа</h2>
                 <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием — так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
                 <p class="khan__quote-author">Джордж Лукас</p>
                 <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
@@ -196,27 +196,35 @@
             <section class="resources">
               <h2 class="section-title">Полезные ресурсы</h2>
               <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
-              <div class="resources__logo-zone">
-                <a class="resources__link" href="#">
-                  <img class="resources__logo" src="./images/arzamas.svg" alt="Логотип Arzamas">
-                </a>
-                <a class="resources__link" href="#">
-                  <img class="resources__logo" src="./images/n1.svg" alt="Логотип n1">
-                </a>
-                <a class="resources__link" href="#">
-                  <img class="resources__logo" src="./images/strelka.svg" alt="Логотип STRELKA">
-                </a>
-                <a class="resources__link" href="#">
-                  <img class="resources__logo" src="./images/polka.svg" alt="Логотип ПОЛКА">
-                </a>
-              </div>
+              <ul class="resources__logo-zone">
+                <li>
+                  <a class="resources__link" href="#">
+                    <img class="resources__logo" src="./images/arzamas.svg" alt="Логотип Arzamas">
+                  </a>
+                </li>
+                <li>
+                  <a class="resources__link" href="#">
+                    <img class="resources__logo" src="./images/n1.svg" alt="Логотип n1">
+                  </a>
+                </li>
+                <li>
+                  <a class="resources__link" href="#">
+                    <img class="resources__logo" src="./images/strelka.svg" alt="Логотип STRELKA">
+                  </a>
+                </li>
+                <li>
+                  <a class="resources__link" href="#">
+                    <img class="resources__logo" src="./images/polka.svg" alt="Логотип ПОЛКА">
+                  </a>
+                </li>
+              </ul>
             </section>
         </main>
         <footer class="footer">
           <div class="footer__columns">
             <div class="footer__column footer__column_content_copyright">
               <div class="logo logo_place_footer"></div>
-              <p class="footer__author">&copy;2019. Белич Дмитрий</p>
+              <p class="footer__author">&copy;2020. Белич Дмитрий</p>
             </div>
             <nav class="footer__column footer__column_content_info">
               <h2 class="footer__column-heading">О Практикуме</h2>
